// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can paste a valid url and add it to topic 1`] = `
<div
  class="c-taxonomy-lightbox"
>
  <div
    aria-hidden="true"
    class="c-overlay"
  />
  <div
    class="c-taxonomy-lightbox__wrapper"
  >
    <div
      class="c-taxonomy-lightbox__header"
    >
      Søk etter ressurs
      <button
        class="css-b1xtu5 emotion-0"
        type="button"
      >
        <svg
          class="c-icon css-1yvjjcj"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="c-taxonomy-lightbox__content"
    >
      <input
        data-testid="addResourceUrlInput"
        placeholder="Lim inn lenke fra ndla.no"
        type="text"
        value="https://beta.ndla.no/subjects/subject:3/topic:1:179373/topic:1:170165/resource:1:168388/"
      />
      <span
        class="c-errorMessage"
      >
        Obs! Denne ressursen er en annen type urn:resourcetype:tasksAndActivities
      </span>
      <div
        class="c-article-preview"
        data-testid="articlePreview"
      >
        <div
          class="c-article-preview__image"
        >
          <img
            alt=""
            src="/placeholder.png"
          />
        </div>
        <div
          class="c-article-preview__content"
        >
          <a
            href="/subject-matter/learning-resource/356/edit/undefined"
          >
            <h1
              class="c-article-preview__title"
            >
              Hva kan du om geologiske prosesser?
            </h1>
          </a>
          <p
            class="c-article-preview__description"
          />
        </div>
      </div>
      <button
        class="css-dygiml emotion-0"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Velg
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 1`] = `
<div
  class="c-taxonomy-lightbox"
>
  <div
    aria-hidden="true"
    class="c-overlay"
  />
  <div
    class="c-taxonomy-lightbox__wrapper"
  >
    <div
      class="c-taxonomy-lightbox__header"
    >
      Søk etter ressurs
      <button
        class="css-b1xtu5 emotion-0"
        type="button"
      >
        <svg
          class="c-icon css-1yvjjcj"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="c-taxonomy-lightbox__content"
    >
      <input
        data-testid="addResourceUrlInput"
        placeholder="Lim inn lenke fra ndla.no"
        type="text"
        value=""
      />
      <span
        class="c-taxonomy-lightbox__or"
      >
        Eller
      </span>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="downshift-0-label"
        aria-owns="downshift-0-menu"
        class="c-dropdown"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-0-menu"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          id="downshift-0-input"
          value=""
        />
        <div
          class="c-dropdown__items c-dropdown__items--resourceMenu"
          data-testid="dropdown-items"
        >
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-0"
            role="option"
          >
            Hva kan du om geologiske prosesser?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-1"
            role="option"
          >
            Hva kan du om petroleumsgeologi?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-2"
            role="option"
          >
            Hva kan du om olje og gass på den norske sokkelen?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-3"
            role="option"
          >
            Hva kan du om letemetoder og datainnsamling?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-4"
            role="option"
          >
            Hva kan du om installasjoner for boring og vedlikehold?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-5"
            role="option"
          >
            Hva kan du om installasjoner for produksjon?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-6"
            role="option"
          >
            Sammendrag om rørhåndtering
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-7"
            role="option"
          >
            Hva kan du om slamsystemet?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-8"
            role="option"
          >
            Hva kan du om sementeringsutstyret?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-9"
            role="option"
          >
            Hva kan du om stigerørsystemet?
          </div>
        </div>
      </div>
      <button
        class="css-dygiml emotion-0"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Velg
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 2`] = `
<div
  class="c-taxonomy-lightbox"
>
  <div
    aria-hidden="true"
    class="c-overlay"
  />
  <div
    class="c-taxonomy-lightbox__wrapper"
  >
    <div
      class="c-taxonomy-lightbox__header"
    >
      Søk etter ressurs
      <button
        class="css-b1xtu5 emotion-0"
        type="button"
      >
        <svg
          class="c-icon css-1yvjjcj"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="c-taxonomy-lightbox__content"
    >
      <input
        data-testid="addResourceUrlInput"
        placeholder="Lim inn lenke fra ndla.no"
        type="text"
        value=""
      />
      <span
        class="c-taxonomy-lightbox__or"
      >
        Eller
      </span>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="downshift-0-label"
        aria-owns="downshift-0-menu"
        class="c-dropdown"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-0-menu"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          id="downshift-0-input"
          value="Hva kan du om geologiske prosesser?"
        />
        <div
          class="c-dropdown__items c-dropdown__items--resourceMenu"
          data-testid="dropdown-items"
        >
          <div
            aria-selected="true"
            class="c-dropdown__item"
            id="downshift-0-item-0"
            role="option"
          >
            <strong>
              Hva kan du om geologiske prosesser?
            </strong>
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-1"
            role="option"
          >
            Hva kan du om petroleumsgeologi?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-2"
            role="option"
          >
            Hva kan du om olje og gass på den norske sokkelen?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-3"
            role="option"
          >
            Hva kan du om letemetoder og datainnsamling?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-4"
            role="option"
          >
            Hva kan du om installasjoner for boring og vedlikehold?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-5"
            role="option"
          >
            Hva kan du om installasjoner for produksjon?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-6"
            role="option"
          >
            Sammendrag om rørhåndtering
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-7"
            role="option"
          >
            Hva kan du om slamsystemet?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-8"
            role="option"
          >
            Hva kan du om sementeringsutstyret?
          </div>
          <div
            aria-selected="false"
            class="c-dropdown__item"
            id="downshift-0-item-9"
            role="option"
          >
            Hva kan du om stigerørsystemet?
          </div>
        </div>
      </div>
      <div
        class="c-article-preview"
        data-testid="articlePreview"
      >
        <div
          class="c-article-preview__image"
        >
          <img
            alt=""
            src="/placeholder.png"
          />
        </div>
        <div
          class="c-article-preview__content"
        >
          <a
            href="/subject-matter/learning-resource/356/edit/undefined"
          >
            <h1
              class="c-article-preview__title"
            >
              Hva kan du om geologiske prosesser?
            </h1>
          </a>
          <p
            class="c-article-preview__description"
          />
        </div>
      </div>
      <button
        class="css-dygiml emotion-0"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Velg
      </button>
    </div>
  </div>
</div>
`;
